--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
     "symfony/phpunit-bridge": "^6.0|^7.0"
   },
   "scripts": {
-    "post-package-uninstall": [
+    "pre-package-uninstall": [
       "ISerranoDev\\EncryptBundle\\Composer\\ScriptHandler::removeConfig"
     ]
   }
