--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -26,6 +26,14 @@ services:
       - { name: 'doctrine.orm.entity_listener', event: 'preFlush' }
       - { name: 'doctrine.orm.entity_listener', event: 'postLoad' }
 
+  ISerranoDev\EncryptBundle\EventListener\HashListener:
+    arguments:
+      $encryptService: '@ISerranoDev\EncryptBundle\Service\EncryptService'
+      $entityManager: '@doctrine.orm.entity_manager'
+    tags:
+      - { name: 'doctrine.orm.entity_listener', event: 'preFlush' }
+      - { name: 'doctrine.orm.entity_listener', event: 'postLoad' }
+
   ISerranoDev\EncryptBundle\Doctrine\Migrations\EncryptAwareMigrationFactory:
     arguments:
       $connection: '@doctrine.dbal.default_connection'
