--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "beberlei/doctrineextensions": "^1.4",
     "doctrine/doctrine-bundle": "^2.10",
     "doctrine/doctrine-migrations-bundle": "^3.2",
-    "doctrine/orm": "^2.16",
+    "doctrine/orm": "^2.16|^3.0",
     "paragonie/halite": "^5.0",
     "symfony/console": "^6.0|^7.0",
     "symfony/filesystem": "^6.0|^7.0",
